--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <title>Научиться учиться</title>
   
 </head>
@@ -12,28 +13,141 @@
     <header class="header">
       <div class="logo logo_place_header">
         <img src="../images/logo_place_header.svg" alt="мог быть логотим яндекса">
-      </div> 
-      <h1 class=" title header__title">Научиться учиться</h1>
-      <p class="subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? Узнать →</p>
+      </div>
+      <div class="title-row"> 
+        <h1 class=" title header__title">Научиться учиться</h1>
+      </div>
+      <p class="subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a class="header__link" href=""> Узнать →</a></p>
       <img class="main-illustration" src="../images/two_again.png" alt="опять двойка(">
       <div class="square-pic"></div>
     </header>
     <main class="content">
       <section class="description">
+        <div class="two-columns">
+          <h3 class="brief__two-columns">Главные проблемы в обучении</h3>
+          <div class="main-text__two-columns">
+            <p class="paragraph__two-columns">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <div class="paragraph__two-columns">
+              <span class="span-accent__two-columns">Вывод: </span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+            </div>
+            <p class="paragraph__two-columns">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+          </div>
+        </div>
       </section>
 
       <section class="digits">
+        <h2 class="section-title">Цифры и факты</h2>
+        <h3 class="section-subtitle">Про учёбу и мозг</h3>
+        <table class="table">
+            <tr class="table_row">
+              <th class="cell__table">
+                <h3 class="heading__table">86 миллиардов</h3> <p class="text__table">Число нейронов в мозге человека</p> 
+              </th>
+              <th class="cell__table">
+                <h3 class="heading__table">2.1 миллиарда</h3> <p class="text__table">Число нуждающихся в повышении квалификации
+                <p class="text__table">Всемирный Банк, 2017</p></p> 
+              </th>
+              <th class="cell__table">
+                <h3 class="heading__table">1000 терабайт</h3> <p class="text__table">Объём памяти человека</p> 
+              </th>
+              <th class="cell__table">
+              <h3 class="heading__table">500 триллионов</h3> <p class="text__table">Число ответственных за обучение нервных синапсов у взрослого человека</p> 
+              </th>
+            </tr>
+          <tr class="table_row">
+            <td class="cell__table">
+              <h3 class="heading__table">420 миллионов</h3> <p class="text__table">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства<p class="text__table">Всемирный Банк, 2017</p></p> 
+            </td>
+            <td class="cell__table">
+              <h3 class="heading__table">17–20 лет</h3> <p class="text__table">Пик обучаемости</p> 
+            </td>
+            <td class="cell__table">
+              <h3 class="heading__table">885 год</h3> <p class="text__table">Открытие кривой забывания</p> 
+            </td>
+            <td class="cell__table">
+              <h3 class="heading__table">1889 год</h3> <p class="text__table">Открытие условного рефлекса</p> 
+            </td>
+          </tr>
+        </table>
       </section>
 
       <section class="feynman">
+        <h1 class="title__feynman">Метод Фейнмана</h1>
+        <h2 class="subtitle__feynman">Выучить и не забыть.</h2>
+        <a href="" class="link__feynman" >Подробнее →</a>
+        <img class="picture__feynman" src="../images/feynman.png" alt="тут Фейнман">
       </section>
 
       <section class="kaufman">
+        <h1 class="section-title section-title_theme_dark">Принципы обучения</h1>
+        <h2 class="section-subtitle section-subtitle_theme_dark">От Джоша Кауфмана</h2>
+        <img class='triangle__kaufman' src="../images/kaufman-triangle.svg" alt="что то типо треугольника">
+        <table class="table table_theme_dark">
+          <tr class="table_row table_row_theme_dark">
+            <th class="cell__table cell__table_theme_dark">
+              <h3 class="heading__table heading__table_theme_dark">1</h3> <p class="text__table text__table_theme_dark">Выберите привлекательный проект.</p> 
+            </th>
+            <th class="cell__table cell__table_theme_dark">
+              <h3 class="heading__table heading__table_theme_dark">2</h3> <p class="text__table text__table_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p> 
+            </th>
+            <th class="cell__table cell__table_theme_dark">
+              <h3 class="heading__table heading__table_theme_dark">3</h3> <p class="text__table text__table_theme_dark">Определите целевой уровень мастерства.</p> 
+            </th>
+            <th class="cell__table cell__table_theme_dark">
+            <h3 class="heading__table heading__table_theme_dark">4</h3> <p class="text__table text__table_theme_dark">Разбейте навык на элементы.</p> 
+            </th>
+            <th class="cell__table cell__table_theme_dark">
+              <h3 class="heading__table heading__table_theme_dark">5</h3> <p class="text__table text__table_theme_dark">Приготовьте всё необходимое для занятий.</p> 
+            </th>
+          </tr>
+        <tr class="table_row table_row_theme_dark">
+          <td class="cell__table cell__table_theme_dark">
+            <h3 class="heading__table heading__table_theme_dark">6</h3> <p class="text__table text__table_theme_dark">Устраните препятствия для занятий.</p> 
+          </td>
+          <td class="cell__table cell__table_theme_dark">
+            <h3 class="heading__table heading__table_theme_dark">7</h3> <p class="text__table text__table_theme_dark">Выделите специальное время для занятий.</p> 
+          </td>
+          <td class="cell__table cell__table_theme_dark">
+            <h3 class="heading__table heading__table_theme_dark">8</h3> <p class="text__table text__table_theme_dark">Создайте быстрые петли обратной связи.</p> 
+          </td>
+          <td class="cell__table cell__table_theme_dark ">
+            <h3 class="heading__table heading__table_theme_dark">9</h3> <p class="text__table text__table_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p> 
+          </td>
+          <td class="cell__table cell__table_theme_dark ">
+            <h3 class="heading__table heading__table_theme_dark">10</h3> <p class="text__table text__table_theme_dark">Уделяйте внимание количеству и скорости.</p> 
+          </td>
+        </tr>
+      </table>
       </section>
     </main>
     <footer class="footer">
+      <div class="columns__footer">
+        <div class="column__footer_content_copyright">
+          <div class="logo_place_header logo_place_footer">
+            <img src="../images/logo_place_footer.svg" alt="мог быть логотим яндекса">
+          </div>
+            <h3 class="author__footer"> &copy Виктор Абанькин</h3>
+        </div>
+        <div class="column__footer_content_info">
+          <h2 class="column-heading__footer">О практикуме</h2>
+            <nav class="columns-link__footer">
+              <a href="" class="column-link__footer">Главная</a>
+              <a href="" class="column-link__footer">Концепция</a>
+              <a href="" class="column-link__footer">Наставники</a>
+            </nav>
+        </div>
+        <div class="column__footer_content_social">
+          <h2 class="column-heading__footer">Соцсети</h2>
+          <nav class="columns-link__footer">
+            <a href="" class="column-link__footer"><img class="social-icon__footer" src="../images/facebook_color_white.svg" alt="faceebok">Facebook</a>
+            <a href="" class="column-link__footer"><img class="social-icon__footer" src="../images/instagram_color_white.svg" alt="inst">Instagram</a>
+            <a href="" class="column-link__footer"><img class="social-icon__footer" src="../images/vk_color_white.svg" alt="vk">ВКонтакте</a>
+          </nav>
+        </div>
+      </div>
 
     </footer>
   </div>
 </body>
 </html>
+\
